ajustando urls no security